# xmos-jtag-idf-component

./: .gitignore  README.md
components/xmos_jtag/: CMakeLists.txt
components/xmos_jtag/include/: jtag_ice40.h  jtag_svf.h
components/xmos_jtag/src/: ice40.c  svf_player.c  xmos_jtag.c
example/main/: index.html  main.c
test/: test_xe_parser.c
